# rust-fmi_SE

./: .gitignore  Cargo.toml  README.md  SE_IMPLEMENTACION.md  SE_PLAN.md
acoplado_sim/: Cargo.toml
acoplado_sim/src/: main.rs
boton_pwm_cs/: Cargo.toml
boton_pwm_cs/src/: lib.rs
docs/: cosim_data.csv  plot_cosim.py
rust-fmi/fmi-export/src/fmi3/: export.rs  variable_builder.rs
rust-fmi/fmi-export/src/fmi3/instance/: common.rs  impl_se.rs  mod.rs
rust-fmi/fmi-export/src/fmi3/traits/: mod.rs  wrappers.rs
rust-fmi/fmi-export/tests/: test_scheduled_execution.rs
semaforoV2_se/: Cargo.toml  GUIA_PASO_A_PASO.md
semaforoV2_se/examples/: simular.rs
semaforoV2_se/src/: lib.rs
semaforo_se/: Cargo.toml
semaforo_se/src/: lib.rs
src/: lib.rs
